--- a/src/app/work-space/content/documents/documents-tabs/documents-tabs.component.css
+++ b/src/app/work-space/content/documents/documents-tabs/documents-tabs.component.css
@@ -27,3 +27,18 @@ div {
 .inline-x {
     display: inline-block;
 }
+
+::-webkit-scrollbar {
+    width: 0px;
+    /* remove scrollbar space */
+    height: 0px;
+    background: transparent;
+    /* optional: just make scrollbar invisible */
+}
+
+
+/* optional: show position indicator in red */
+
+::-webkit-scrollbar-thumb {
+    background: #FF0000;
+}
