--- a/src/app/work-space/popup-window/chart-popup/chart-popup.component.html
+++ b/src/app/work-space/popup-window/chart-popup/chart-popup.component.html
@@ -1,7 +1,7 @@
 <div class="container modal-content chart-popup">
   <div class="row panel-heading modal-header">
     <span class='btn-close glyphicon glyphicon-remove' (click)='onClose()'></span>
-    <h5 class="modal-title">Resultados</h5>
+    <h5 class="modal-title">Resultados - {{resultName}}</h5>
   </div>
   <div class="panel-body">
     <div class="row input-group">
@@ -15,7 +15,7 @@
         (click)="view='table'">Tabla</button>
       </div>
     </div>
-    <div *ngIf="result && (view=='table')" class="row" style="max-height:70%;overflow:auto">
+    <div *ngIf="result && (view=='table')" class="row" style="max-height:500px;margin:10px;overflow:auto">
       <div class="col-md-12" style="margin-bottom: 10px">
         <table *ngIf="result.cooc" class="table table-striped table-responsive table-condensed">
           <thead>
